fix /tags create, improve file system, add default file option